# plan

./: .gitignore  README.md  pyproject.toml  pytest.ini  test.md
examples/: basic_workflow.py  dynamic_analysis_workflow.py
scripts/: combsrc.sh
src/plan/: visualization.py
src/plan/capabilities/: __init__.py  base.py  factory.py  instruction.py  interfaces.py  metadata.py  orchestrator.py  plan.py  registry.py  schema.py  tool.py
src/plan/llm/: __init__.py  handler.py  templates.py  tool.py
src/plan/orchestration/: orchestrator.py
src/plan/planning/: __init__.py  executor.py  models.py  planner.py  validation.py
src/plan/prompts/: capability.py  instruction.py  planning.py
tests/: test_basic_capabilities.py  test_capability_resolution.py  test_plan_visualization.py  test_prompt_handler.py  test_prompt_handler2.py
