[project]
name = "plan"
version = "0.1.0"
description = "Add your description here"
authors = [{ name = "Donald Thompson", email = "witt3rd@witt3rd.com" }]
dependencies = [
    "openai>=1.54.4",
    "matplotlib>=3.9.2",
    "networkx>=3.4.2",
    "loguru>=0.7.2",
    "pydantic>=2.9.2",
    "pytest>=8.3.3",
    "pytest-asyncio>=0.24.0",
    "function-schema>=0.4.4",
    "semver>=3.0.2",
    "psutil>=6.1.0",
    "scipy>=1.14.1",
    "jinja2>=3.1.4",
]
readme = "README.md"
requires-python = ">= 3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = ["-e ."]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/plan"]

[tool.pytest]
pythonpath = "src"

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = "test_*.py"

[tool.pyright]
extraPaths = ["src"]
typeCheckingMode = "basic"
reportMissingImports = false
pythonVersion = "3.12"
pythonPlatform = "All"
